<resources>
    <string name="app_name">SecureBank</string>
    <string name="loginLabel">SECUREBANK</string>
    <string name="usernameLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="loginButton">Login</string>
    <string name="title_activity_main_bank">activity_main_bank</string>
    <string name="title_transactions">Home</string>
    <string name="title_store">Store</string>
    <string name="title_search">Search</string>
    <string name="loginFail">Please input username and password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="close_application">Close application</string>
    <string name="exit">Exit</string>
    <string name="sender_label_card">Sender:</string>
    <string name="receiver_label_card">Receiver:</string>
    <string name="sender_label">Sender</string>
    <string name="receiver_label">Receiver</string>
    <string name="transaction_datetime_label">Transaction DateTime</string>
    <string name="reason_label">Reason</string>
    <string name="reference_label">Reference</string>
    <string name="amount_label">Amount</string>
    <string name="create_label">Create</string>
    <string name="receiver_e_mail_hint">Receiver e-mail</string>
    <string name="create_new_transaction">Create new transaction</string>
    <string name="details_of_transaction_label">Details of transaction</string>
    <string name="senderid_label">SenderId</string>
    <string name="receiverid_label">ReceiverId</string>
    <string name="zero_euro">0 €</string>
    <string name="settings_label">Settings</string>
    <string name="create_new_transaction_label">Create new transaction</string>
    <string name="password_recovery_label">Password recovery</string>
    <string name="title_secret">Secret</string>
    <string name="new_user">New user?</string>
    <string name="register">Register</string>
    <string name="sign_up">Create a new account</string>
    <string name="confirmPasswordLabel">Confirm Password</string>
    <string name="i_accept_the_terms_and_conditions">I accept the Terms and conditions.</string>
    <string name="search">Search:</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="ip">IP:</string>
    <string name="connection_settings">Connection settings</string>
    <string name="title_activity_main_navigation_drawer">MainNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Store</string>
    <string name="menu_slideshow">Search</string>
    <string name="make_new_transaction">New transaction</string>
    <string name="cancel">Cancel</string>
    <string name="Actions">actions</string>
    <string name="protocol">Protocol:</string>
    <string name="https">HTTPS</string>
    <string name="http">HTTP</string>
</resources>
