<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_transaction"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/navigation_addTransaction"
            android:icon="@drawable/list"
            android:title="@string/make_new_transaction" />
        <item
            android:id="@+id/navigation_store"
            android:icon="@drawable/ic_baseline_store_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_internet"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/navigation_secret"
            android:icon="@drawable/ic_sudo"
            android:title="@string/title_secret" />
    </group>
</menu>