<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:orientation="vertical"
    android:transitionName="@string/create_new_transaction_label"
    tools:context=".UI.Activity.CreateNewTransactionActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="35dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="15dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_transaction_label"
                android:textSize="@dimen/label_big"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/colorBlack"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sender_label"
                android:textSize="@dimen/label_medium"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/createNewTransaction_sender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:background="@drawable/text_field_underline"
                android:enabled="false"
                android:importantForAutofill="no"
                android:padding="5dp"
                android:textSize="@dimen/label_medium" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/receiver_label"
                android:textSize="@dimen/label_medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/createNewTransaction_receiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:background="@drawable/underline_selector"
                android:hint="@string/receiver_e_mail_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/transaction_datetime_label"
                android:textSize="@dimen/label_medium"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/createNewTransaction_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:background="@drawable/underline_selector"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/mm_dd_yyyy"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="48dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reason_label"
                android:textSize="@dimen/label_medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/createNewTransaction_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:background="@drawable/underline_selector"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reference_label"
                android:textSize="@dimen/label_medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/createNewTransaction_reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:background="@drawable/underline_selector"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/amount_label"
                android:textSize="@dimen/label_medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/createNewTransaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:background="@drawable/underline_selector"
                android:digits="0123456789."
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="5dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createNewTransaction_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/round_button"
                android:text="@string/create_label"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>