<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Activity.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="35dp"
            android:background="@drawable/layout_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/l_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/loginLabel"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/et_username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/reg_et_username"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:background="@drawable/underline_selector"
                android:hint="@string/usernameLabel"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="5dp" />

            <EditText
                android:id="@+id/reg_et_password1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:background="@drawable/underline_selector"
                android:hint="@string/passwordLabel"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="5dp" />

            <EditText
                android:id="@+id/reg_et_password2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:background="@drawable/underline_selector"
                android:hint="@string/confirmPasswordLabel"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="5dp" />

            <CheckBox
                android:id="@+id/termsAndConditions"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:buttonTint="@color/colorAccent"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/i_accept_the_terms_and_conditions" />


            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/round_button"
                android:onClick="onRegisterClick"
                android:text="@string/register"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>