<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_arc"
    tools:context=".UI.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_login_settings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:id="@+id/l_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/loginLabel"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:background="@drawable/underline_selector"
            android:hint="@string/usernameLabel"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/l_login" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:background="@drawable/underline_selector"
            android:hint="@string/passwordLabel"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <Button
            android:id="@+id/btn_forgotPassword"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:lines="1"
            android:onClick="onForgotYourPasswordClick"
            android:text="@string/forgot_your_password"
            android:textColor="#2962FF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_newUser"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:lines="1"
            android:onClick="onNewUserClick"
            android:text="@string/new_user"
            android:textColor="#2962FF"
            android:textSize="12sp" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_button"
            android:onClick="onLoginClick"
            android:text="@string/loginButton"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>